Fix: new feature bugs fixed

--- a/visualizer/explore.html
+++ b/visualizer/explore.html
@@ -23,7 +23,7 @@
         <div id="icon">
             <!-- <img src="img/logo.png" id="nav-icon"> -->
             <a class="nav-button" href="https://mathvista.github.io/"
-                style="margin-left: 2px; font-size: 24px">MathVista Visualizer
+                style="margin-left: 2px; font-size: 24px">OverBench Visualizer
             </a>
         </div>
         <!-- <div>
