Feat: logo added

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
         <div id="results-carousel" class="carousel results-carousel">
           <div class="box m-5">
             <div class="content has-text-centered">
-              <img src="static/images/human_and_MLLM.png" alt="geometric reasoning" width="84%"/>
+              <img src="static/images/human_and_MLLM.png" alt="geometric reasoning" width="42%"/>
               <p> MLLMs exhibit behaviors similar to human cognitive distortions, leading to <b class="best-score-text" style="color: #C6011F">oversensitive responses </b>where benign queries are perceived as harmful. We discover that oversenstivity prevails amount existing MLLMs on 
               <img src="static/images/psych.webp" style="width:1.0em;vertical-align: middle" alt="Logo"/>
               <span class="mathvista">MOSSBench</span>
@@ -305,7 +305,7 @@
           <p>
             As the initial step in investigating this behavior, we identify three types of stimulus that trigger the oversensitivity of existing MLLMs: <strong><em>Exaggerated Risk</em></strong>, <strong><em>Negated Harm</em></strong>, and <strong><em>Counterintuitive Interpretation</em></strong>.
             To systematically evaluate MLLMs' oversensitivity to these stimuli, we propose the <b>M</b>ultimodal <b>O</b>ver<b>S</b>en<b>S</b>itivity <b>B</b>enchmark <img src="static/images/psych.webp" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-            <span class="mathvista">MOSSBench</span>. This toolkit consists of 300 manually collected benign multimodal queries, cross-verified by third-party reviewers (AMT).
+            (<span class="mathvista">MOSSBench</span>). This toolkit consists of 300 manually collected benign multimodal queries, cross-verified by third-party reviewers (AMT).
           </p>
           <p>
             Empirical studies using <img src="static/images/psych.webp" style="width:1.0em;vertical-align: middle" alt="Logo"/>
@@ -1113,6 +1113,14 @@
   </div>
 </section>
 
+<!-- versensitivity Stimuli -->
+<section class="hero is-light is-small">
+  <div class="hero-body has-text-centered">
+    <h1 class="title is-1 mathvista">Oversensitivity Stimuli</h1>
+  </div>
+</section>
+
+
 <!-- DATASET SECTION -->
 <section class="hero is-light is-small">
   <div class="hero-body has-text-centered">
@@ -1687,14 +1695,14 @@
 
 <section>
   <div class="section" id="org-banners" style="display:flex">
-    <a href="https://www.ucla.edu/" target="_blank" rel="external">
+    <a href="https://www.ucla.edu/" target="blank" rel="external">
         <img class="center-block org-banner" src="static/images/ucla.png">
     </a>
-    <a href="https://www.washington.edu/" target="blank" class="ext-link">
-        <img class="center-block org-banner" src="static/images/uw.png">
+    <a href="https://umd.edu/" target="blank" class="ext-link">
+        <img class="center-block org-banner" src="static/images/UMD.png">
     </a>
-    <a href="https://www.microsoft.com/en-us/research/" target="_blank" rel="external">
-        <img class="center-block org-banner" src="static/images/microsoft.png">
+    <a href="https://www.psu.edu/" target="blank" rel="external">
+        <img class="center-block org-banner" src="static/images/pennstate.png">
     </a>
   </div>
 </section>
@@ -1708,7 +1716,7 @@
       <div class="column is-8">
         <div class="content">
           <p>
-            This website is website adapted from <a href="https://nerfies.github.io/">Nerfies</a>, licensed under a <a rel="license"
+            This website is website adapted from <a href="https://nerfies.github.io/">Nerfies</a> and <a href="https://mathvista.github.io/">MathVista</a>, licensed under a <a rel="license"
                                                 href="http://creativecommons.org/licenses/by-sa/4.0/">Creative
             Commons Attribution-ShareAlike 4.0 International License</a>.
           </p>
