Feat: added ARC logo

--- a/index.html
+++ b/index.html
@@ -134,6 +134,15 @@
             <span class="author-block">* Equal contribution</span>
             <!-- <span class="paper-block"><b style="color:#f41c1c">ICLR 2024 Oral</b> (85 in 7304, 1.2%)</span> -->
           </div>
+
+          <div class="is-size-5 publication-authors">
+            <span class="author-block">
+              <strong><span style="font-size: 1.5em; color: crimson;">A</span></strong>IGC
+              <strong><span style="font-size: 1.5em; color: crimson;">R</span></strong>esearch
+              <strong><span style="font-size: 1.5em; color: crimson;">C</span></strong>ollaboration
+            </span>
+          </div>
+
         
           <!-- <section> -->
             <!-- <div class="section" id="org-banners" style="display:fle">
