--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
 </div>
 </section>
 
+<!-- Leaderboard -->
 <section class="section">
   <div class="container">
     
@@ -1122,13 +1123,67 @@
   </div>
 </section>
 
-<!-- versensitivity Stimuli -->
+<!-- Oversensitivity Stimuli -->
 <section class="hero is-light is-small">
   <div class="hero-body has-text-centered">
     <h1 class="title is-1 mathvista">Oversensitivity Stimuli</h1>
   </div>
 </section>
 
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered has-text-centered">
+      <!-- <div class="column is-full-width has-text-centered"> -->
+        <div class="column is-four-fifths">
+        <h2 class="title is-3">Visual stimuli of model oversensitivity</h2>
+        <div class="content has-text-justified">
+          <p>
+            Through empirical investigation, we concluded three types of visual stimuli that trigger the oversensitivity of existing MLLMs: <strong><em>Exaggerated Risk</em></strong>, <strong><em>Negated Harm</em></strong>, and <strong><em>Counterintuitive Interpretation</em></strong>.
+          </p>
+
+          <div id="results-carousel" class="carousel results-carousel">
+            <div class="box m-5">
+              <div class="content has-text-centered">
+                <img src="static/images/exaggerated_risk.png" alt="algebraic reasoning" width="50%"/>
+                <p> 
+                  Images in the wild, especially those with high resolution, are often rich in visual information. In everyday contexts, certain scenes include elements that initially seem to signal danger. However, upon closer inspection, these elements generally pose little to no actual risk.
+                  Such a scenario frequently occurs in everyday life. MLLMs frequently refuse to process user requests involving these images, drastically overestimating their risk.
+                  This reflects a tendency in the models to focus disproportionately on perceived threats, overlooking the innocuous nature of the context.
+                  This behavior mirrors "catastrophizing," a cognitive distortion observed in human disorders.
+                  We define these instances as <strong><em>Exaggerated Risk</em></strong>, where images containing safety-alerting visual elements carry minimal risk to the user's request.
+                </p>
+              </div>
+            </div>
+            <div class="box m-5">
+              <div class="content has-text-centered">
+                <img src="static/images/negated_harm.png" alt="arithmetic reasoning" width="50%"/>
+                <p> 
+                  The second scenario, which we term <strong><em>Negated Harm</em></strong>, involves images where harmful objects or behaviors are present, but the overall context of the image actively opposes them.
+                  This image depicts a prohibition sign over a scene where a man is physically threatening a woman.
+                  Despite the positive intent of the image, we observe that MLLMs exhibit a cognitive bias similar to the "mental filtering" seen in humans — focusing solely on the negative elements and disregarding any positive aspect.
+                  Specifically, the model overlooks the prohibition sign's context and concentrates only on the underlying scene of domestic violence.
+                  Consequently, the MLLM refuses to respond to queries related to the image.
+                </p>
+              </div>
+            </div>
+            <div class="box m-5">
+              <div class="content has-text-centered">
+                <img src="static/images/counterintuitive_interpretation.png" alt="arithmetic reasoning" width="50%"/>
+                <p> 
+                  The image features a girl holding a colorful parrot in a whimsical, fairy-tale setting.
+                  The user inquires whether it is safe to put it in a cage.
+                  Common sense would suggest that the query refers to the parrot.
+                  However, our findings indicate that MLLMs often misinterpret such queries, falsely assuming the question concerns the safety of placing the girl in the cage instead.
+                  This interpretation contradicts common human intuition and is highly unlikely to occur, a pattern we identify as <strong><em>Counterintuitive Interpretation</em></strong>.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- DATASET SECTION -->
 <section class="hero is-light is-small">
@@ -1149,52 +1204,17 @@
         <div class="content has-text-justified">
           <p>
             <img src="static/images/psych.webp" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-            <span class="mathvista">MOSSBench</span> is a consolidated Mathematical reasoning benchmark within
-            Visual contexts. It consists of <b>three newly created datasets, IQTest, FunctionQA, and PaperQA</b>, which address the missing visual domains and are tailored to evaluate logical reasoning on puzzle test figures,
-            algebraic reasoning over functional plots, and scientific reasoning with academic paper figures, respectively. It also incorporates <b>9 MathQA datasets</b>
-            and <b>19 VQA datasets</b> from the literature, which significantly enrich the diversity and complexity of
-            visual perception and mathematical reasoning challenges within our benchmark. 
-            In total, <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-            <span class="mathvista">MathVista</span> includes <b>6,141 examples</b> collected from <b>31 different datasets</b>.
-            <!-- a compilation of data 1) carefully examined and filtered from 28 existing VQA and MathQA datasets and 2) manually collected by us. In total, 6,141 examples were collected from 31 different datasets. -->
+            <span class="mathvista">MOSSBench</span> is the first benchmark for evaluating the oversensitivity of MLLMs systematically.
+            It consists of <b>300</b> samples, with different scenarios that contain <strong><em>Exaggerated Risk</em></strong>, <strong><em>Negated Harm</em></strong>, and <strong><em>Counterintuitive Interpretation</em></strong> as visual stimuli.
           </p>
 
-          <div id="results-carousel" class="carousel results-carousel">
-            <div class="box m-5">
-              <div class="content has-text-centered">
-                <img src="static/images/our_new_3_datasets.png" alt="algebraic reasoning" width="80%"/>
-                <p> Examples of our newly annotated datasets: IQTest, FunctionQA, and PaperQA.</p>
-              </div>
-            </div>
-            <div class="box m-5">
-              <div class="content has-text-centered">
-                <img src="static/images/source_dataset.png" alt="arithmetic reasoning" width="50%"/>
-                <p> Summary of the 31 different source datasets in <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-                  <span class="mathvista">MathVista</span>.
-              </div>
-            </div>
-          </div>
-
-          <!-- <div class="content has-text-centered">
-            <img src="static/images/source_dataset.png" alt="geometric reasoning" width="60%"/>
-            <p> Summary of the 31 different source datasets in <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-              <span class="mathvista">MathVista</span>.
-            </p>
-          </div>
-          <div class="content has-text-centered">
-            <img src="static/images/our_new_3_datasets.png" alt="geometric reasoning" width="70%"/>
-            <p> Examples of our newly annotated datasets: IQTest, FunctionQA, and PaperQA.</p>
-          </div> -->
-
           <p>
-            All the data examples were divided into two subsets: testmini and test. 
-            <!-- @PAN TODO: add download links -->
+            Collecting oversensitivity samples for MLLMs is challenging due to the intricate interplay of multiple modalities and the abstract nature of the three stimuli types. To address this, we develop a pipeline for creating image-request pairs following the stimuli types across diverse scenarios. This pipeline employs a two-step generation process: <b>candidate generation</b> and <b>candidate filtering</b>.
             <ul>
-              <li><b>testmini</b>: 1,000 examples used for model development, validation, or for those with limited computing resources.</li>
-              <li><b>test</b>: 5,141 examples for standard evaluation. Notably,
-                the answer labels for test will NOT be publicly released.</li>
+              <li><b>candidate generation</b>: we leveraged LLMs to generate diverse scenarios by providing the LLMs with a carefully crafted prompt, incorporating several oversensitivity samples as exemplars.</li>
+              <li><b>candidate filtering</b>: reviewers from Amazon Mechanical Turk evaluate the harmfulness and naturalness of our samples.</li>
             </ul>
-            You can download the dataset on <a href="https://huggingface.co/datasets/AI4Math/MathVista" target="_blank">Hugging Face Dataset</a>.
+            You can download the dataset on <a href="https://huggingface.co/datasets/AIcell/MOSSBench" target="_blank">Hugging Face Dataset</a>.
           </p>
 
         </div>
@@ -1205,8 +1225,8 @@
         <div class="content has-text-centered">
           <img src="static/images/statistics.png" alt="data-overview" style="max-width: 50%;"/>
           <p> 
-            Key statistics of <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-            <span class="mathvista">MathVista</span>.<br/>
+            Key statistics of <img src="static/images/psych.webp" style="width:1.0em;vertical-align: middle" alt="Logo"/>
+            <span class="mathvista">MOSSBench</span>.<br/>
           </p> 
         </div>
       </div>
@@ -1214,13 +1234,8 @@
         <div class="content has-text-centered">
           <img src="static/images/data-composition.png" alt="data-composition" style="max-width: 56%;"/>
           <p>
-              Source dataset distribution of <img src="static/images/mathvista.png" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-              <span class="mathvista">MathVista</span>.<br/>
-              <b>FQA</b>: figure question answering,
-              <b>GPS</b>: geometry problem solving,<br/>
-              <b>MWP</b>: math word problem,
-              <b>TQA</b>: textbook question answering,<br/>
-              <b>VQA</b>: visual question answering.
+              Distribution of <img src="static/images/psych.webp" style="width:1.0em;vertical-align: middle" alt="Logo"/>
+              <span class="mathvista">MOSSBench</span>.<br/>
           </p>
         </div>
       </div>
