Feat: feat logo

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     gtag('config', 'G-PYVRSFMDRL');
   </script> -->
 
-  <link rel="icon" href="./static/images/mathvista.png">
+  <link rel="icon" href="./static/images/psych.webp">
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
