Feat: small link added

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <a class="navbar-item" href="https://ruocwang.github.io/">
             <b>Negative Prompts</b> <p style="font-size:18px; display: inline; margin-left: 5px;">🔥</p>
           </a>
-          <a class="navbar-item" href="https://ruocwang.github.io/">
+          <a class="navbar-item" href="https://measure-infinity.github.io/mulan/">
             MuLan
           </a>
         </div>
