Feat: commented out unneeded examples

--- a/index.html
+++ b/index.html
@@ -444,8 +444,8 @@
         <div class="content has-text-centered">
           <img src="static/images/harm_type.png" alt="data-composition" style="max-width: 40%;"/>
           <p>
-              Distribution of <img src="static/images/psych.webp" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-              <span class="mathvista">MOSSBench</span>.<br/>
+            Distribution of <img src="static/images/psych.webp" style="width:1.0em;vertical-align: middle" alt="Logo"/>
+            <span class="mathvista">MOSSBench</span>.<br/>
           </p>
         </div>
       </div>
@@ -550,11 +550,11 @@
               <img src="static/images/results-examples/Gemini_safety-critical_misperception.png" alt="" width="60%"/>
             </div>
           </div>
-          <div class="box m-5">
+          <!-- <div class="box m-5">
             <div class="content has-text-centered">
               <img src="static/images/results-examples/safety_critical_misperception.png" alt="" width="60%"/>
             </div>
-          </div>
+          </div> -->
           <div class="box m-5">
             <div class="content has-text-centered">
               <img src="static/images/results-examples/safety_critical_misperception_2.png" alt="" width="60%"/>
@@ -656,7 +656,7 @@
 
 
 <!-- @PAN TODO: bibtex -->
-<section class="section" id="BibTeX">
+<!-- <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title is-3 has-text-centered">BibTeX</h2>
     <pre><code>@inproceedings{lu2024mathvista,
@@ -666,7 +666,7 @@
   year      = {2024}
 }</code></pre>
   </div>
-</section>
+</section> -->
 
 <section>
   <div class="section" id="org-banners" style="display:flex">
