Feat: changes adapted

--- a/visualizer/explore.html
+++ b/visualizer/explore.html
@@ -22,7 +22,7 @@
     <div id="nav">
         <div id="icon">
             <!-- <img src="img/logo.png" id="nav-icon"> -->
-            <a class="nav-button" href="https://mathvista.github.io/"
+            <a class="nav-button" href="https://xirui-li.github.io/MOSSBench/"
                 style="margin-left: 2px; font-size: 24px">MOSSBench Visualizer
             </a>
         </div>
