--- a/index.html
+++ b/index.html
@@ -274,29 +274,27 @@
   <div class="container" style="margin-top: -150px; margin-bottom: -100px;">
     <div class="columns is-centered m-6">
       <div class="column is-full has-text-centered content">
-        <div id="results-carousel" class="carousel results-carousel">
-          <div class="box m-5">
-            <div class="content has-text-centered">
-              <img src="static/images/human_and_MLLM.png" alt="geometric reasoning" width="42%"/>
-              <p> MLLMs exhibit behaviors similar to human cognitive distortions, leading to <b class="best-score-text" style="color: #C6011F">oversensitive responses </b>where benign queries are perceived as harmful. We discover that oversenstivity prevails amount existing MLLMs on 
-              <img src="static/images/psych.webp" style="width:1.0em;vertical-align: middle" alt="Logo"/>
+        <div class="box m-5">
+          <div class="content has-text-centered">
+            <img src="static/images/human_and_MLLM.png" alt="geometric reasoning" width="42%"/>
+            <p>MLLMs exhibit behaviors similar to human cognitive distortions, leading to <b class="best-score-text" style="color: #C6011F">oversensitive responses</b> where benign queries are perceived as harmful. We discover that oversensitivity prevails among existing MLLMs on 
+              <img src="static/images/psych.webp" style="width:1.0em; vertical-align: middle" alt="Logo"/>
               <span class="mathvista">MOSSBench</span>
-              </p>
-            </div>
+            </p>
           </div>
-          <div class="box m-5">
-            <div class="content has-text-centered">
-              <img src="static/images/MOSSBench_compliance.png" alt="geometric reasoning" width="84%"/>
-              <p> Cpmpliance rate of SOTA MLLMs on 
-              <img src="static/images/psych.webp" style="width:1.0em;vertical-align: middle" alt="Logo"/>
-              <span class="mathvista">MOSSBench</span>.
-              Proprietary MLLMs (e.g., Claude 3, Gemini) exhibits more oversensitive behaviors on our dataset.
-              </p>
-            </div>
+        </div>
+        <div class="box m-5">
+          <div class="content has-text-centered">
+            <img src="static/images/MOSSBench_compliance.png" alt="geometric reasoning" width="84%"/>
+            <p>Compliance rate of SOTA MLLMs on 
+              <img src="static/images/psych.webp" style="width:1.0em; vertical-align: middle" alt="Logo"/>
+              <span class="mathvista">MOSSBench</span>. Proprietary MLLMs (e.g., Claude 3, Gemini) exhibit more oversensitive behaviors on our dataset.
+            </p>
           </div>
         </div>
       </div>
     </div>
+  </div>
 </section>
 
 
@@ -651,8 +649,71 @@
         </div>
       </div>
     </div>
+
+    <div class="container is-full has-text-centered content m-6" id="result-table">
+      <h2 class="title is-3" id="explorer">Explorer</h2>
+      <p>Explore the outputs of each model on <img src="static/images/psych.webp" style="width:1.0em;vertical-align: middle" alt="Logo"/>
+        <span class="mathvista">MOSSBench</span></p>
+      <div class="level has-text-centered" style="position: sticky; top: 0; z-index: 20;">
+        <div class="level-item box m-3" style="width: 30%; background: rgba(250, 250, 250, 1);">
+          <button class="button" style="width: 100%; border: none; background: rgba(250, 250, 250, 1);" id="refresh-qids">
+            <span class="icon is-large">
+              <i class="fa fa-redo fa-lg" aria-hidden="true"></i>
+            </span>
+            <p class="title is-4 m-0">Refresh Question</p>
+          </button>
+        </div>
+        <div class="level-item box m-3" style="width: 30%; background: rgba(250, 250, 250, 1);">
+          <div class="dropdown" style="width: 100%;">
+            <div class="dropdown-trigger has-text-justified" style="width: 100%; ">
+              <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" style="width: 100%; border: none; background: rgba(250, 250, 250, 1);">
+                <p class="title m-0 is-4 dropdown-display">Gemini-Pro 1.5</p>
+                <span class="icon is-large" style="position: absolute; right:0;">
+                  <i class="fas fa-angle-down fa-lg" aria-hidden="true"></i>
+                </span>
+              </button>
+            </div>
+            <div class="dropdown-menu" id="dropdown-menu" role="menu" style="width:100%;">
+              <div class="dropdown-content">
+                <!-- <a class="dropdown-item">
+                  Dropdown item
+                </a>
+                <a class="dropdown-item">
+                  Other dropdown item
+                </a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="level-item box m-3" style="width: 30%; background: rgba(250, 250, 250, 1);">
+          <div class="dropdown" style="width: 100%;">
+            <div class="dropdown-trigger has-text-justified" style="width: 100%;">
+              <button class="button" aria-haspopup="true" aria-controls="dropdown-menu" style="width: 100%; border: none; background: rgba(250, 250, 250, 1);">
+                <p class="title m-0 is-4 dropdown-display">Claude 3 Opus</p>
+                <span class="icon is-large" style="position: absolute; right:0;">
+                  <i class="fas fa-angle-down fa-lg" aria-hidden="true"></i>
+                </span>
+              </button>
+            </div>
+            <div class="dropdown-menu" id="dropdown-menu" role="menu" style="width:100%;">
+              <div class="dropdown-content">
+                <!-- <a class="dropdown-item">
+                  Dropdown item
+                </a>
+                <a class="dropdown-item">
+                  Other dropdown item
+                </a> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
+
+
+
 
 
 <!-- @PAN TODO: bibtex -->
